@@ -5,35 +5,33 @@ import exception.InvalidAmountException;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.text.NumberFormat;
+import java.util.Locale;
 
-public record Money(BigDecimal value) {
+public record Money(BigDecimal value) implements Comparable<Money>{
+    public static final Money ZERO = new Money(BigDecimal.ZERO);
 
     public Money {
         if (value == null) {
-            throw new InvalidAmountException("Valor não pode ser null");
+            throw new InvalidAmountException("Valor não pode ser null ou negativo");
         }
 
         value = value.setScale(2, RoundingMode.HALF_UP);
-    }
-
-    public static Money zero() {
-        return new Money(BigDecimal.ZERO);
     }
 
     public boolean isZero(){
         return value.compareTo(BigDecimal.ZERO) == 0;
     }
 
-    public boolean isPositive() {
-        return value.compareTo(BigDecimal.ZERO) > 0;
+    public static boolean isNegativeOrZero(Money money){
+        return money.compareTo(Money.ZERO) <= 0;
     }
 
-    public boolean isNegative() {
-        return value.compareTo(BigDecimal.ZERO) < 0;
+    public boolean isGreaterThan(Money other){
+        return value.compareTo(other.value) > 0;
     }
 
-    public boolean isGreaterThanOrEqual(Money other) {
-        return value.compareTo(other.value) >= 0;
+    public boolean isEqual(Money other){
+        return value.compareTo(other.value) == 0;
     }
 
     public Money add(Money other) {
@@ -47,7 +45,7 @@ public record Money(BigDecimal value) {
     @Override
     public String toString() {
         return NumberFormat
-                .getCurrencyInstance(new Locale("pt", "BR"))
+                .getCurrencyInstance(Locale.of("pt", "BR"))
                 .format(value);
     }
 
@@ -56,6 +54,7 @@ public record Money(BigDecimal value) {
         return new Money(multiply);
     }
 
+    @Override
     public int compareTo(Money other) {
         return value.compareTo(other.value);
     }
